# FoodiAI_Agents

./: .gitignore  README.md  pyproject.toml
src/: .env.example  main.py
src/Graph/llmcompiler/: agent_graph.py  joiner.py  main_graph.py  plan_pretty.py  planner.py  task_fetching_unit.py  token_cost.py
src/Graph/llmcompiler/tools/: __init__.py  calc_nutrition.py  search_internet.py  search_youtube.py  tool_test1.py
src/LLMs/: EnumAgents.py
src/LLMs/Cloud/: Interface_Cloud_LLM.py
src/LLMs/FineTuning/: Enums_FT_LLM.py  Interface_FT_LLM.py  lora_fine_tuning.ipynb
src/LLMs/FineTuning/provider/: L2M2test.ipynb  LFM2Provider.py
src/helpers/: config.py
src/logs/: __init__.py  log.py
src/routes/: base.py
